arreglo: faltaba el src/index.tsx en el archivo index.html

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jrn-estudio-jurídico",
+  "name": "jrn-estudio-juridico",
   "private": true,
   "version": "0.0.0",
   "type": "module",
